--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <div class="section-title">
           <h2>Sobre mi</h2>
           <p>Me llamo Mariano, tengo una gran pasión por el mundo de la ciberseguridad, aunque mi experiencia es mayor en Red team que Blue team me interesan por igual ambas secciones, comencé con el Pentesting cuando tuve que desarrollar mi proyecto fin de grado (ASIR) y decidí realizarlo sobre la plataforma HackTheBox.</br></br>
-        En cuanto a mi perfil profesional, he trabajado en el desarrollo de varias paginas web con PHP, WordPress y Drupal (boxocolate.com y globalproteccion.es) también he trabajado como administrador de sistemas (servidores, equipos clientes, linux, wserver) y servicio de atención técnica de clientes.</br></br>
-      Actualmente trabajo como SOC Analyst de nivel 1 en una empresa llamada Secify ubicada en Murcia en la cual soy el encargado de llevar la herramienta SIEM de la empresa y la monitorización y revisión de reglas del firewall así como servicios a los clientes de informes y ticketing.</p>
+        En cuanto a mi perfil profesional, he trabajado en el desarrollo de varias paginas web con PHP, WordPress y Drupal (boxocolate.com y globalproteccion.es) también he trabajado como administrador de sistemas (servidores, equipos clientes, linux, wserver) y servicio de atención técnica de clientes.</br></br></p>
   </br>
       <script src="https://www.hackthebox.eu/badge/274711"></script>
   
