--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <h3 class="resume-title">Resumen</h3>
             <div class="resume-item pb-0">
               <h4>Mariano Martinez</h4>
-              <p><em>Más de dos años en servicios de soporte para particulares, reparación, montaje y formateo de equipos (torres, portatiles, servidores) a domicilio. Puesta en marcha de los mismos, instalar, configurar y mantener la disponibilidad de los sistemas.</em></p>
+              <p><em>Más de un año en servicios de soporte para particulares, reparación, montaje y formateo de equipos (torres, portatiles, servidores) a domicilio. Puesta en marcha de los mismos, instalar, configurar y mantener la disponibilidad de los sistemas.</em></p>
               <ul>
                 <li>España, Murcia</li>
                 <li>+34 658 551 332 </li>
@@ -250,38 +250,39 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experiencia Profesional</h3>
             <div class="resume-item">
-              <h4>Security Operations Center Analyst</h4>
+              <h4>Pentester & SOC Analyst</h4>
               <h5>2020 - Actualidad</h5>
               <p><em>Secify, Murcia, España </em></p>
               <ul>
-                <li>Monitorización de anomalías y amenazas potenciales con herramientas SIEM</li>
+                <li>Monitorización de anomalías y amenazas potenciales con herramientas SIEM.</li>
                 <li>Interpretación y monitorización de eventos de seguridad y sistemas.</li>
-                <li>Mantenimiento y aplicación de reglas en firewall.</li>
-                <li>Gestión de incidencias (tickets) y manejo de herramientas de ticketing.</li>
+                <li>Informes de SOC.
+                <li>Auditorías y consultorías de seguridad (Black Box, Grey Box, White Box).</li>
+                <li>Implantación y ejecución de herramientas automatizadas de análisis de vulnerabilidades.</li>
+                <li>Seguridad en el endpoint (EDR).</li>
+                <li>Implementación y configuración IDS/IPS.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Web Developer and Cybersecurity</h4>
+              <h4>Desarrollador Web, Ciberseguridad & IoT - Becario | Erasmus</h4>
               <h5>2020 - 4 meses</h5>
               <p><em>SevenShift, Colonia, Alemania</em></p>
               <ul>
-                <li>MQTT man-in-the-middle con Mosquitto y HAProxy.</li>
+                <li>MitM con Mosquitto (MQTT) y HAProxy.</li>
                 <li>Desarrollo y mantenimiento de plugins para WordPress en PHP.</li>
                 <li>Automatización de tareas utilizando técnicas de web scraping con Python y Shell scripting.</li>
-                <li>Configuración de CA’s, incl. la creación y manejo de certificados digitales.</li>
                 <li>IoT: análisis de protocolos, pentesting y securización.</li>
                 <li>Desarrollo de Scripts para el mantenimiento y administración de la web.</li>
               </ul>
             </div>
              <div class="resume-item">
-              <h4>Information Technology Technician</h4>
+              <h4>Técnico informático (CAU) - Becario</h4>
               <h5>2017 - 6 meses</h5>
               <p><em>BFV Informatica, Murcia, España</em></p>
               <ul>
                 <li>Soporte de servicio de asistencia en primera línea, resolviendo problemas informáticos para los clientes.</li>
                 <li>Administración y verificación de copias de seguridad.</li>
                 <li>Reparar, actualizar hardware y asegurar que los equipos estén en pleno funcionamiento.</li>
-                <li>Mantenimiento con ERP Sage Eurowin.</li>
               </ul>
             </div>
           </div>
