--- a/index.html
+++ b/index.html
@@ -210,12 +210,7 @@
             <h3 class="resume-title">Resumen</h3>
             <div class="resume-item pb-0">
               <h4>Mariano Martinez</h4>
-              <p><em>Más de un año en servicios de soporte para particulares, reparación, montaje y formateo de equipos (torres, portatiles, servidores) a domicilio. Puesta en marcha de los mismos, instalar, configurar y mantener la disponibilidad de los sistemas.</em></p>
-              <ul>
-                <li>España, Murcia</li>
-                <li>+34 658 551 332 </li>
-                <li>mariano.mb2910@gmail.com</li>
-              </ul>
+              <p><em>Amante de la informática y apasionado de la Ciberseguridad.</em></p>
             </div>
 
             <h3 class="resume-title">Educación</h3>
