--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Mariano Martinez Beltran</h1>
-      <p>I'm <span class="typed" data-typed-items="Pentester, SysAdmin, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Pentester, SysAdmin, SOC Analyst"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -314,6 +314,11 @@
             <div class="icon"><i class="icofont-computer"></i></div>
             <h4 class="title">Cables Ethernet</h4>
             <p class="description">Preparación de cables Ethernet cat5e de los metros que necesites</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="icofont-education"></i></div>
+            <h4 class="title">Profesor particular</h4>
+            <p class="description">Clases particulares a estudiantes de FP Grado Medio y FP Grado Superior</p>
           </div>
         </div>
 
