--- a/index.html
+++ b/index.html
@@ -327,11 +327,12 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Tools ====== -->
-
-    <div class="section-title">
-          <h2>Herramientas y Técnicas utilizadas/h2>
+    <div class="container">
+      <div class="section-title">
+            <h2>Herramientas y Técnicas utilizadas</h2>
+      </div>
+                <span class="skill">Entornos de virtualización vCenter, vSphere, ESXi <i class="val"></i></span>
     </div>
-              <span class="skill">Entornos de virtualización vCenter, vSphere, ESXi <i class="val"></i></span>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
