--- a/index.html
+++ b/index.html
@@ -357,6 +357,26 @@
             </div>
 
           </div>
+          
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="progress">
+              <span class="skill">OSINT</span>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Seguridad endpoint (EDR)</span>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Seguridad de la información</span>
+            </div>
+            
+            <div class="progress">
+              <span class="skill">Vuln tools, Burp Suite, ZAP, Nessus</span>
+            </div>
+
+          </div>
 
         </div>
 
