--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/icon.png" rel="icon">
-  <link href="assets/img/icon.png" rel="my-touch-icon">
+  <!-- <link href="assets/img/icon.png" rel="icon">
+  <link href="assets/img/icon.png" rel="my-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -357,7 +357,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">osint (theHarvester - twint - shodan.io - google dorks - recon-ng - spiderfoot)</span>
+              <span class="skill">osint (theHarvester - twint - shodan.io - google dorks)</span>
             </div>
 
             <div class="progress">
