--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             </div>
             
             <div class="progress">
-              <span class="skill">SQLi</span>
+              <span class="skill">SQL injection</span>
             </div>
 
              <div class="progress">
