--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-
+<section id="indez" class="index">
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
@@ -49,7 +49,7 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
+          <li class="active"><a href="#index"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
@@ -68,7 +68,7 @@
       <p>I'm <span class="typed" data-typed-items="Pentester, SysAdmin, SOC Analyst"></span></p>
     </div>
   </section><!-- End Hero -->
-
+  </section>
   <main id="main">
 
     <!-- ======= About Section ======= -->
