--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
+          <li><a href="#skills"><i class="icofont-badge"></i> Herramientas y técnicas</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
         </ul>
       </nav><!-- .nav-menu -->
