--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
-          <li><a href="#skills"><i class="icofont-badge"></i> Herramientas y técnicas</a></li>
+          <li><a href="#habilidades"><i class="icofont-badge"></i> Herramientas y técnicas</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -312,7 +312,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Tools ====== -->
-  <section id="skills" class="skills section-bg">
+  <section id="habilidades" class="habilidades">
       <div class="container">
       <div class="section-title">
             <h2>Herramientas y Técnicas utilizadas</h2>
