--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Tools ====== -->
-  <section id="habilidades" class="habilidades">
+  <section id="habilidades" class="skills section-bg">
       <div class="container">
       <div class="section-title">
             <h2>Herramientas y Técnicas utilizadas</h2>
