--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 class="text-light"><a href="index.html">Mariano Martinez</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/mariano-m/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/m4rxb/" target="_blank" class="github"><i class="icofont-github"></i></a>
+          <a href="https://www.github.com/m4rxb/" target="_blank" class="github"><i class="fab fa-github"></i></a>
         </div>
       </div>
 
