--- a/index.html
+++ b/index.html
@@ -271,6 +271,45 @@
       </div>
     </section><!-- End Resume Section -->
 
+ <!-- ======= Courses and certifications Section ======= -->
+    <section id="cert" class="cert">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Cursos y certificaciones</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="icofont-certificate"></i></div>
+            <h4 class="title">Certified Professional: Kaspersky EDR (P24.10)</h4>
+            <p class="description">Kaspersky - feb 2021 - Credential ID: P24.10-AAS-0103538</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="icofont-repair"></i></div>
+            <h4 class="title">Servicio técnico en remoto</h4>
+            <p class="description">Monitorización y mantenimiento de equipos, software y antivirus en remoto</p>
+          </div></br>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="icofont-dashboard-web"></i></div>
+            <h4 class="title">Desarrollo Web</h4>
+            <p class="description">Pideme sin compromiso un presupuesto para tu página web</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="icofont-brand-wire"></i></div>
+            <h4 class="title">Cables Ethernet</h4>
+            <p class="description">Preparación de cables Ethernet cat5e de los metros que necesites</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="icofont-education"></i></div>
+            <h4 class="title">Profesor particular</h4>
+            <p class="description">Clases particulares a estudiantes de FP Grado Medio y FP Grado Superior</p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
     <!-- ======= Tools ====== -->
   <section id="habilidades" class="skills section-bg">
       <div class="container">
