--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-certificate"></i></div>
             <h4 class="title">Certified Professional: Kaspersky EDR (P24.10)</h4>
-            <p class="description">Kaspersky - feb 2021 - Credential ID: P24.10-AAS-0103538</p>
+            <p class="description">Kaspersky<br/>Credential ID: P24.10-AAS-0103538</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-repair"></i></div>
