--- a/index.html
+++ b/index.html
@@ -284,27 +284,27 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-certificate"></i></div>
             <h4 class="title">Certified Professional: Kaspersky EDR (P24.10)</h4>
-            <p class="description">Kaspersky<br/>Credential ID: P24.10-AAS-0103538</p>
+            <p class="description">Kaspersky - feb 2021<br/>Credential ID: P24.10-AAS-0103538</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-repair"></i></div>
-            <h4 class="title">Servicio técnico en remoto</h4>
-            <p class="description">Monitorización y mantenimiento de equipos, software y antivirus en remoto</p>
+            <div class="icon"><i class="icofont-certificate"></i></div>
+            <h4 class="title">NSE 1 - Netowrk Security Associate</h4>
+            <p class="description">Fortinet - mar 2021<br/>Credential ID: 1SFQz4b4ZG</p>
           </div></br>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-dashboard-web"></i></div>
-            <h4 class="title">Desarrollo Web</h4>
-            <p class="description">Pideme sin compromiso un presupuesto para tu página web</p>
+            <div class="icon"><i class="icofont-certificate"></i></div>
+            <h4 class="title">NSE 2 - Netowrk Security Associate</h4>
+            <p class="description">Fortinet - mar 2021<br/>Credential ID: gea06VXmgM</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-brand-wire"></i></div>
-            <h4 class="title">Cables Ethernet</h4>
-            <p class="description">Preparación de cables Ethernet cat5e de los metros que necesites</p>
+            <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
+            <h4 class="title">Análisis de Malware</h4>
+            <p class="description">Udemy - jul 2021</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-education"></i></div>
-            <h4 class="title">Profesor particular</h4>
-            <p class="description">Clases particulares a estudiantes de FP Grado Medio y FP Grado Superior</p>
+            <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
+            <h4 class="title">Ransomware: Identify, Protect, Detect, Recover</h4>
+            <p class="description">(ISC)<sup>2</sup> - aug 2021</p>
           </div>
         </div>
 
