--- a/index.html
+++ b/index.html
@@ -281,20 +281,25 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-certificate"></i></div>
-            <h4 class="title">Certified Professional: Kaspersky EDR (P24.10)</h4>
-            <p class="description">Kaspersky - feb 2021<br/>Credential ID: P24.10-AAS-0103538</p>
-          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-certificate"></i></div>
-            <h4 class="title">NSE 1 - Netowrk Security Associate</h4>
+            <h4 class="title">NSE 1 - Network Security Associate</h4>
             <p class="description">Fortinet - mar 2021<br/>Credential ID: 1SFQz4b4ZG</p>
           </div></br>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-certificate"></i></div>
-            <h4 class="title">NSE 2 - Netowrk Security Associate</h4>
+            <h4 class="title">NSE 2 - Network Security Associate</h4>
             <p class="description">Fortinet - mar 2021<br/>Credential ID: gea06VXmgM</p>
+          </div>
+           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="icofont-certificate"></i></div>
+            <h4 class="title">Certified Professional: Kaspersky EDR (P24.10)</h4>
+            <p class="description">Kaspersky - feb 2021<br/>Credential ID: P24.10-AAS-0103538</p>
+          </div>
+         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
+            <h4 class="title">Ransomware: Identify, Protect, Detect, Recover</h4>
+            <p class="description">(ISC)<sup>2</sup> - aug 2021</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
@@ -303,13 +308,13 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
-            <h4 class="title">Ransomware: Identify, Protect, Detect, Recover</h4>
-            <p class="description">(ISC)<sup>2</sup> - aug 2021</p>
+            <h4 class="title">Attacking Web Applications with Ffuf</h4>
+            <p class="description">HackTheBox Academy - jul 2021</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
-            <h4 class="title">Attacking Web Applications with Ffuf</h4>
-            <p class="description">HackTheBox Academy - jul 2021</p>
+            <h4 class="title">Master Wifi Ethical Hacking - Evil Twin Attacks</h4>
+            <p class="description">Udemy - jul 2021</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
@@ -318,13 +323,23 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
-            <h4 class="title">Ethical Hacker Fundamentals</h4>
-            <p class="description">EC-Council - may 2020</p>
+            <h4 class="title">JavaScript Deobfuscation</h4>
+            <p class="description">HackTheBox Academy - jun 2021</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
+            <h4 class="title">Cybersecurity Essentials EN 0118</h4>
+            <p class="description">Cisco Networking Academy - oct 2020</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
             <h4 class="title">Ethical hacking, Pentesting and network security with Python coding</h4>
             <p class="description">Udemy - sep 2020</p>
+          </div>
+           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
+            <h4 class="title">Ethical Hacker Fundamentals</h4>
+            <p class="description">EC-Council - may 2020</p>
           </div>
         </div>
 
