--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <p class="description">(ISC)<sup>2</sup> - aug 2021</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="iconify" data-icon="simple-icons:udemy"></i></div>
+            <div class="icon"><i class="icofont-certificate-alt-1"></i></div>
             <h4 class="title">Análisis de Malware</h4>
             <p class="description">Udemy - jul 2021</p>
           </div>
