--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
           <li><a href="#cert"><i class="icofont-badge"></i> Cursos y certificaciones</a></li>
           <li><a href="#habilidades"><i class="icofont-tools-bag"></i> Herramientas y técnicas</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
+         <!-- <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li> -->
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
         </ul>
       </nav><!-- .nav-menu -->
