--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">osint (theHarvester - twint - shodan.io - google dorks)</span>
+              <span class="skill">osint</span>
             </div>
 
             <div class="progress">
