--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#skills"><i class="icofont-list"></i> <span>Habilidades</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
           <li><a href="#cert"><i class="icofont-badge"></i> Cursos y certificaciones</a></li>
-          <li><a href="#habilidades"><i class="icofont-tools-bag"></i> Herramientas y técnicas</a></li>
+          <li><a href="#tools"><i class="icofont-tools-bag"></i> Herramientas y técnicas</a></li>
          <!-- <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li> -->
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
         </ul>
@@ -350,7 +350,7 @@
     <!-- End Courses Section -->
 
     <!-- ======= Tools ====== -->
-  <section id="habilidades" class="skills section-bg">
+  <section id="tools" class="skills section-bg">
       <div class="container">
       <div class="section-title">
             <h2>Herramientas y Técnicas utilizadas</h2>
