--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Introducing myself</title>
+  <title>Stay updated!</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,7 +40,7 @@
 
       <div class="profile">
         <img src="assets/img/yo2.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Mariano Martinez</a></h1>
+        <h1 class="text-light"><a href="index.html">Mariano 'm4rxb' Martinez</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/mariano-m/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.github.com/m4rxb/" target="_blank" class="github"><i class="icofont-github"></i></a>
@@ -49,13 +49,9 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="#index"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
-          <li><a href="#skills"><i class="icofont-list"></i> <span>Habilidades</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
-          <li><a href="#cert"><i class="icofont-badge"></i> Cursos y certificaciones</a></li>
-          <li><a href="#tools"><i class="icofont-tools-bag"></i> Herramientas y técnicas</a></li>
-         <!-- <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li> -->
+          <li class="active"><a href="#index"><i class="bx bx-home"></i> <span>Noticias</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>Write-Ups HackTheBox</span></a></li>
+          <li><a href="#tools"><i class="icofont-tools-bag"></i> Tips / Cheat sheets for Pentesters</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -67,7 +63,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Mariano Martinez Beltran</h1>
+      <h1>m4rxb.</h1>
       <p>I'm <span class="typed" data-typed-items="Pentester, SysAdmin, SOC Analyst"></span></p>
     </div>
   </section><!-- End Hero -->
