--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="#index"><i class="bx bx-home"></i> <span>Noticias</span></a></li>
+          <li class="active"><a href="#index"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
+          <li class="#"><a href="#index"><i class="bx bx-home"></i> <span>Noticias</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>Write-Ups HackTheBox</span></a></li>
           <li><a href="#tools"><i class="icofont-tools-bag"></i> Tips / Cheat sheets for Pentesters</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
@@ -63,7 +64,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>m4rxb.</h1>
+      <h1>m4rxb</h1>
       <p>I'm <span class="typed" data-typed-items="Pentester, SysAdmin, SOC Analyst"></span></p>
     </div>
   </section><!-- End Hero -->
