--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="#index"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
-          <li class="#"><a href="#index"><i class="bx bx-home"></i> <span>Noticias</span></a></li>
+          <li><a href="#news"><i class="bx bx-home"></i> <span>Noticias</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>Write-Ups HackTheBox</span></a></li>
           <li><a href="#tools"><i class="icofont-tools-bag"></i> Tips / Cheat sheets for Pentesters</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contacto</a></li>
@@ -72,15 +72,22 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="news" class="news">
       <div class="container">
 
         <div class="section-title">
-          <h2>Sobre mi</h2>
-          <p>Después de haber finalizado la Formación Profesional Superior de Administración de Sistemas Informáticos en Red (ASIR) 
-            he decidido orientar mi carrera profesional hacia el mundo de la Ciberseguridad, por lo que he adquirido avanzados conocimientos 
-            tanto en Red Team como Blue Team.<br>Actualmente me encuentro en constante crecimiento y aprendizaje, participo en CTFs (NCL, HackTheBox, TryHackMe) 
-            para pulir al máximo mis habilidades en este campo.</br></p>
+          <h2> Los peligros de las 'apps' que modifican WhatsApp: desde quedarte sin cuenta hasta que te roben el dinero </h2>
+          
+          <p>A estas alturas, en pleno 2021 y con el 'smartphone' funcionando, prácticamente, como un apendice más del usuario, 
+            decir que la 'app' de mensajería ha transformado por completo la forma en la que nos comunicamos es poco menos que una evidencia. 
+            Sus más de 2.000 millones de usuarios, y su fuerte implementación, la convierten en una herramienta necesaria; en muchas zonas, como en España, 
+            incluso en imprescindible en algunos casos. El problema, o al menos uno de tantos, llega en el momento en el que el internauta -acostumbrado a 
+            emplear la plataforma hora sí y hora también- se encapricha con algún truco que no está disponible en la versión oficial y se decide a descargar un software 
+            diferente que añade funcionalidades: desde cambiar el color del icono en la pantalla, hasta no aparecer 'en línea' o poner contraseña a algunas conversaciones.
+            Aunque, en principio, las funciones que ofrecen estas herramientas pueden parecer interesantes, los riesgos que corre el usuario que recurre a ellas son numerosos. 
+            La propia WhatsApp advierte sobre ello en sus condiciones de servicio, donde explica que «no avala el uso» debido a que para la compañía «no es posible validar 
+            sus prácticas de seguridad». Lo mismo señalan en conversación con ABC expertos en ciberseguridad. Kaspersky, en concreto, acaba de compartir una informe en el 
+            que sostiene que ha encontrado una versión maliciosa de una aplicación de este tipo llamada FMWhatsApp, que esconde en su interior virus informático.</br></p>
   </br>
  
         </div>
