--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             Sus más de 2.000 millones de usuarios, y su fuerte implementación, la convierten en una herramienta necesaria; en muchas zonas, como en España, 
             incluso en imprescindible en algunos casos. El problema, o al menos uno de tantos, llega en el momento en el que el internauta -acostumbrado a 
             emplear la plataforma hora sí y hora también- se encapricha con algún truco que no está disponible en la versión oficial y se decide a descargar un software 
-            diferente que añade funcionalidades: desde cambiar el color del icono en la pantalla, hasta no aparecer 'en línea' o poner contraseña a algunas conversaciones.</br>
+            diferente que añade funcionalidades: desde cambiar el color del icono en la pantalla, hasta no aparecer 'en línea' o poner contraseña a algunas conversaciones.
+            </br></br>
             Aunque, en principio, las funciones que ofrecen estas herramientas pueden parecer interesantes, los riesgos que corre el usuario que recurre a ellas son numerosos. 
             La propia WhatsApp advierte sobre ello en sus condiciones de servicio, donde explica que «no avala el uso» debido a que para la compañía «no es posible validar 
             sus prácticas de seguridad». Lo mismo señalan en conversación con ABC expertos en ciberseguridad. Kaspersky, en concreto, acaba de compartir una informe en el 
