--- a/index.html
+++ b/index.html
@@ -89,6 +89,33 @@
             La propia WhatsApp advierte sobre ello en sus condiciones de servicio, donde explica que «no avala el uso» debido a que para la compañía «no es posible validar 
             sus prácticas de seguridad». Lo mismo señalan en conversación con ABC expertos en ciberseguridad. Kaspersky, en concreto, acaba de compartir una informe en el 
             que sostiene que ha encontrado una versión maliciosa de una aplicación de este tipo llamada FMWhatsApp, que esconde en su interior virus informático.</br></p>
+  
+  
+           <h2> Se experimenta un aumento del 29% en los ataques contra instituciones en todo el mundo </h2>
+      
+           <p>Check Point Research (CPR) ha observado un aumento constante del número medio de ciberataques semanal por organización, siendo el sector de la 
+            educación/investigación el que presenta un mayor número de ofensivas.
+            </br></br>
+            En España, en los últimos tres meses se han producido una media de 2.998 ataques semanales por centro educativo
+            </br></br>
+            Desde el mes de marzo, Check Point Research (CPR), la división de Inteligencia de Amenazas de Check Point® Software Technologies Ltd. 
+            (NASDAQ: CHKP) señala que, desde mediados de 2020 existe un aumento constante del número de ciberataques semanales por empresa a nivel mundial, 
+            siendo el sector de la educación/investigación el que se está viendo más afectado. En España, en los últimos tres meses ha habido una media de 2.998 ataques 
+            semanales por centro educativo. Esto supone un aumento del 11% en comparación con el primer semestre (enero-mayo de 2021), con 2.695 ofensivas por semana de media 
+            por institución educativa.
+            </br></br>
+            En 2020, la pandemia de la COVID-19 obligó a las empresas a cambiar, de forma repentina, a sus empleados al trabajo remoto. En cuestión de semanas, 
+            las compañías que no contaban con programas de teletrabajo tuvieron que adaptarse y actualizar su infraestructura para que sus equipos, partners y usuarios pudieran 
+            trabajar desde casa. Ahora estamos a mediados de 2021, y el fin de la pandemia no está a la vista, por lo que las entidades de muchos sectores tienen que hacer frente 
+            a un panorama de amenazas cada vez más activo y complejo. 
+            </br></br>
+            En particular, las instituciones del sector de la educación y del sector de la investigación se encuentran inmersas en una batalla de ciberseguridad sin precedentes. 
+            Esto incluye escuelas, universidades e instalaciones de investigación. Recientemente, el Departamento de Educación de Nueva Gales del Sur, en Australia, 
+            informó que había sufrido un ciberataque que provocó el cierre de muchas de sus plataformas online, apenas unos días antes de que comenzara el nuevo curso escolar.  
+            </br></br>
+            De hecho, en julio de 2021, tanto en el sector de la educación como en el de la investigación se produjo el mayor volumen de ataques, con una media de 1.739 
+            ciberataques semanales por entidad. Esto supuso un aumento del 29% respecto al primer semestre de 2021. El único campo que experimentó un cambio mayor con respecto al primer 
+            semestre de 2021 fue el del ocio, con un 51%, como era de esperar durante los meses de verano.
   </br>
  
         </div>
