--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             Aunque, en principio, las funciones que ofrecen estas herramientas pueden parecer interesantes, los riesgos que corre el usuario que recurre a ellas son numerosos. 
             La propia WhatsApp advierte sobre ello en sus condiciones de servicio, donde explica que «no avala el uso» debido a que para la compañía «no es posible validar 
             sus prácticas de seguridad». Lo mismo señalan en conversación con ABC expertos en ciberseguridad. Kaspersky, en concreto, acaba de compartir una informe en el 
-            que sostiene que ha encontrado una versión maliciosa de una aplicación de este tipo llamada FMWhatsApp, que esconde en su interior virus informático.</br></p>
-  
+            que sostiene que ha encontrado una versión maliciosa de una aplicación de este tipo llamada FMWhatsApp, que esconde en su interior virus informático.</p>
+            </br></br>
   
            <h2> Se experimenta un aumento del 29% en los ataques contra instituciones en todo el mundo </h2>
       
