--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/yo2.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/unknown.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mariano Martinez</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/mariano-m/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
